--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="google-site-verification" content="qyH6ri3k2wFir_B_B6aK_V1JZ7Av_mafv44pfYtoQzk" />
         <meta name="google-site-verification" content="YX5jEi0KiR9vGg-V1AgxtpWtYNHOjER-Mlh1EyDO-nQ" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link href="/balthazarhertel.css" rel="stylesheet" />
+        <link href="/styles.css" rel="stylesheet" />
         <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400|Muli' rel='stylesheet' type='text/css' />
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-sanitize.min.js"></script>
@@ -158,6 +158,6 @@
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/balthazarhertel.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
