indention and routeProvider.otherwise

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--html lang="en" ng-app="balthazarhertel"-->
-<html lang="en">
+<html lang="en" ng-app="balthazarhertel">
     <head>
         <title>Balthazar Hertel</title>
         <meta name="description" content="Filmfotograf" />
@@ -28,8 +27,7 @@
           ga('send', 'pageview');
         </script>
     </head>
-    <!--body ng-controller="MovieCtrl"-->
-    <body>
+    <body ng-controller="MovieCtrl">
         <moviethumb></moviethumb>
         <div class="container">
         <div class="row">
